# src/main/webui/src/api/openapi.yaml
@@ -147,15 +147,14 @@ paths:
       summary: Register Form
       tags:
       - Additional Shares Resource
-  /api/v1/parts-supplementaires/success/{souscriptionId}:
+  /api/v1/parts-supplementaires/success/{uuid}:
     post:
       parameters:
-      - name: souscriptionId
+      - name: uuid
         in: path
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
       responses:
         "200":
           description: OK
@@ -229,15 +228,14 @@ paths:
       summary: Register Form
       tags:
       - Registration Resource
-  /api/v1/registrations/success/{cooperateurId}:
+  /api/v1/registrations/success/{uuid}:
     post:
       parameters:
-      - name: cooperateurId
+      - name: uuid
         in: path
         required: true
         schema:
-          type: integer
-          format: int64
+          type: string
       responses:
         "200":
           description: OK
@@ -247,6 +245,72 @@ paths:
       summary: Successful Payment
       tags:
       - Registration Resource
+  /api/v1/retry-payment/cooperateur/{uuid}:
+    post:
+      parameters:
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema: {}
+      summary: Retry Cooperateur Payment
+      tags:
+      - Retry Payment Resource
+    get:
+      parameters:
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema: {}
+      summary: Get Cooperateur Payment Info
+      tags:
+      - Retry Payment Resource
+  /api/v1/retry-payment/souscription/{uuid}:
+    post:
+      parameters:
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema: {}
+      summary: Retry Souscription Payment
+      tags:
+      - Retry Payment Resource
+    get:
+      parameters:
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema: {}
+      summary: Get Souscription Payment Info
+      tags:
+      - Retry Payment Resource
 components:
   schemas:
     BinomeDTO:
@@ -279,6 +343,8 @@ components:
         id:
           type: integer
           format: int64
+        uuid:
+          type: string
         genre:
           $ref: "#/components/schemas/Genre"
         prenom:
@@ -338,6 +404,8 @@ components:
         id:
           type: integer
           format: int64
+        uuid:
+          type: string
         prenom:
           type: string
         nom:
